quick navbar spacing fix

--- a/format.css
+++ b/format.css
@@ -27,6 +27,7 @@
 
 .page {
   text-decoration: none;
+  padding-left: 50px;
 }
 
 .pfp {
